--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
 
                             <div class="form-row w-100 mb-4 text-center">
                                 <div class="form-group col-6">
-                                    <button type="submit" class="w-100 btn px-5 py-4 border-0 bg-primary"
-                                        onclick="calculate()">Submit</button>
+                                    <button type="submit" class="w-100 btn py-4 border-0 bg-primary"
+                                        onclick="calculate()">Calculate</button>
                                 </div>
                                 <div class="form-group col-6">
                                     <button type="reset" id="reset"
-                                        class="w-100 btn px-5 py-4 rounded-lg bg-dark text-white">Reset</button>
+                                        class="w-100 btn py-4 rounded-lg bg-dark text-white">Reset</button>
                                 </div>
                             </div>
 
