--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
 <body>
     <header></header>
     <main>
+        <div class="ani">
+            <div class="shape1"></div>
+            <div class="shape2"></div>
+        </div>
         <section class="calculatorSection py-5">
             <div class="container">
                 <div class="row">
@@ -33,10 +37,10 @@
 
                             <div class="form-row mb-4">
                                 <div class="form-group col-6">
-                                    <input type="number" class="form-control py-4" placeholder="0" id="input1" required>
+                                    <input type="number" class="form-control py-4" placeholder="Enter number" id="input1" required>
                                 </div>
                                 <div class="form-group col-6">
-                                    <input type="number" class="form-control py-4" placeholder="0" id="input2" required>
+                                    <input type="number" class="form-control py-4" placeholder="Enter number" id="input2" required>
                                 </div>
                             </div>
 
@@ -51,13 +55,13 @@
                             </div>
 
                             <div class="form-row w-100 mb-4 text-center">
-                                <div class="form-group col-6">
-                                    <button type="submit" class="w-100 btn py-4 border-0 bg-primary"
+                                <div class="form-group col-6 w-75">
+                                    <button type="submit" class="w-100 btn py-4 border-0 bg-dark"
                                         onclick="calculate()">Calculate</button>
                                 </div>
                                 <div class="form-group col-6">
                                     <button type="reset" id="reset"
-                                        class="w-100 btn py-4 rounded-lg bg-dark text-white">Reset</button>
+                                        class="w-100 btn py-4 rounded-lg bg-light text-dark">Clear</button>
                                 </div>
                             </div>
 
